--- a/wiki/EngageCS.wiki
+++ b/wiki/EngageCS.wiki
@@ -1,5 +1,4 @@
-Featured = will show up on home page
-
+#labels Featured
 = Introduction =
 
 Engage-CS is a collection of community supported frameworks designed to make computer science education more engaging. These frameworks can be used by computer science faculty to create interesting and engaging assignments in a variety of topics in computer science.
