--- a/wiki/EngageCS.wiki
+++ b/wiki/EngageCS.wiki
@@ -7,4 +7,4 @@ Engage-CS is a collection of community supported frameworks designed to make com
 
 == Vacuum Cleaner Environment ==
 
-The Vacuum Cleaner Environment is a more complicated version of an environment introduced by Russell and Norvig in Artificial Intelligence: A Modern Approach (2003) to explain intelligent agents and agent environments.  The purpose of this environment is to provide an engaging atmosphere for learning various topics in computer science, such as procedural and declarative programming.  Using this tool, students can create agents using Java, Jess (jessrules.com), or Soar (sitemaker.umich.edu/soar), and watch them interact.
+The Vacuum Cleaner Environment is a more complicated version of an environment introduced by Russell and Norvig in Artificial Intelligence: A Modern Approach (2003).  The purpose of this environment is to provide an engaging atmosphere for learning various topics in computer science, such as procedural and declarative programming.  Using this tool, students can create agents using Java, Jess (jessrules.com), or Soar (sitemaker.umich.edu/soar), and watch them interact.
