Edited wiki page OOGT through web user interface.

--- a/wiki/OOGT.wiki
+++ b/wiki/OOGT.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 == Object-Oriented Game Theory Framework ==
 
 The Object-Oriented Game Theory Framework is an implementation of a simple game playing application framework that provides an engaging atmosphere for teaching various topics in game theory.  Specifically, students can create intelligent agents that compete in a two player competitive game such as Tic-tac-toe or Othello.  The framework comes with a reference implementation that uses Minimax Search and Alpha-Beta Pruning to create an intelligent tic-tac-toe player.  
