--- a/wiki/VacuumCleaner.wiki
+++ b/wiki/VacuumCleaner.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 == Vacuum Cleaner Environment ==
 
 The Vacuum Cleaner Environment is a more complicated version of an environment introduced by Russell and Norvig in Artificial Intelligence: A Modern Approach (2003).  The purpose of this environment is to provide an engaging atmosphere for learning various topics in computer science, such as procedural and declarative programming.  Using this tool, students can create agents using Java, Jess (jessrules.com), or Soar (sitemaker.umich.edu/soar), and watch them interact.
