Edited wiki page EngageCS through web user interface.

--- a/wiki/EngageCS.wiki
+++ b/wiki/EngageCS.wiki
@@ -8,3 +8,5 @@ For general discussion about the Engage-CS project, please free to comment here.
 * [VacuumCleaner Vacuum Cleaner Environment]
 
 * [OOGT Object-Oriented Game Theory Framework]
+
+* [GAFramework Genetic Algorithm Framework]
