--- a/wiki/GAFramework.wiki
+++ b/wiki/GAFramework.wiki
@@ -1,13 +1,6 @@
-#summary One-sentence summary of this page.
+#labels Featured
+== Genetic Algorithm Framework ==
 
-= Introduction =
+The Genetic Algorithm Framework is an interface-based framework for searching problem spaces for solutions using a genetic algorithm.  Students can be asked to solve problems of varying difficulty by implementing various interfaces in the framework.  In addition to solving different problems, students can be asked to experiment with different implementations of the stages of a GA (e.g., selection, crossover, mutation).  
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+For general discussion about the Genetic Algorithm Framework project, please free to comment here.
