--- a/wiki/GAFramework.wiki
+++ b/wiki/GAFramework.wiki
@@ -1,6 +1,6 @@
 #labels Featured
 == Genetic Algorithm Framework ==
 
-The Genetic Algorithm Framework is an interface-based framework for searching problem spaces for solutions using a genetic algorithm.  Students can be asked to solve problems of varying difficulty by implementing various interfaces in the framework.  In addition to solving different problems, students can be asked to experiment with different implementations of the stages of a GA (e.g., selection, crossover, mutation).  
+The Genetic Algorithm Framework is an interface-based framework for searching problem spaces using a genetic algorithm.  Students can be asked to solve problems of varying difficulty by implementing various interfaces in the framework.  In addition to solving different problems, students can be asked to experiment with different implementations of the stages of a GA (e.g., selection, crossover, mutation).  
 
 For general discussion about the Genetic Algorithm Framework project, please free to comment here.
